[package]
name = "ipfs"
version = "0.1.0"
edition = "2021"
description = "IPFS API for Lurk"

[dependencies]
lurk = "0.1.1"
blstrs = "0.5.0"
serde = "1.0"
#serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libipld = { package = "lurk-ipld", version = "0.1.0", default-features = false, features = ["dag-cbor", "dag-json", "serde-codec"] }
tokio = { version = "1.18", features = ["rt", "macros"] }
reqwest = { version = "0.11", features = ["multipart", "json", "blocking"] }
clap = { version = "3.1", features = ["derive"] }

[patch.crates-io]
lurk = { git = "https://github.com/lurk-lang/lurk-rs", branch = "sb/ipfs" }
