[package]
name = "web-repl"
description = "Basic Lurk web REPL"
version = "0.1.0"
authors = ["Sam Burnham"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
default = ["debug"]
debug = ["console_error_panic_hook"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.82"
rayon = "1.5"
wasm-bindgen-rayon = "1.0"

serde_json = "1.0"
rustyline = { package = "yatima-rustyline", version = "0.2", default-features = false }
rustyline-derive = { package = "yatima-rustyline-derive", version = "0.1.0" }
xterm-js-rs = "0.1.2"
lurk = "0.1.1"
blstrs = "0.5.0"
parking_lot = { version = "0.12", features = ["nightly"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
console_error_panic_hook = { version = "0.1.5", optional = true }

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"

[patch.crates-io]
ec-gpu-gen = { git = "https://github.com/lurk-lang/ec-gpu", branch = "sb/wasm-lurk-compat" }
bellperson = { git = "https://github.com/lurk-lang/bellperson", branch = "sb/wasm-lurk-compat" }
bellperson-nonnative = { git = "https://github.com/lurk-lang/bellperson-nonnative", branch = "sb/wasm-lurk-compat" }
neptune = { git = "https://github.com/lurk-lang/neptune", branch = "sb/wasm-lurk-compat" }
nova-snark  = { git = "https://github.com/lurk-lang/nova", branch = "sb/wasm-lurk-compat" }
lurk = { git = "https://github.com/lurk-lang/lurk-rs", branch = "acs/wasm-support" }

[net]
git-fetch-with-cli = true
