[package]
name = "repl"
version = "0.1.0"
edition = "2021"
description = "A web repl for Lurk"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rustyline = { package = "yatima-rustyline", version = "0.2", default-features = false }
rustyline-derive = { package = "yatima-rustyline-derive", version = "0.1.0" }
lurk = { git = "https://github.com/lurk-lang/lurk-rs", branch = "sb/wasm" }

[patch.crates-io]
blst = { git = "https://github.com/lurk-lang/blst", branch = "sb/wasm" }
blstrs = { git = "https://github.com/lurk-lang/blstrs", branch = "sb/wasm-lurk-compat" }
ec-gpu-gen = { git = "https://github.com/lurk-lang/ec-gpu", branch = "sb/wasm-lurk-compat" }
bellperson = { git = "https://github.com/lurk-lang/bellperson", branch = "sb/wasm-lurk-compat" }
neptune = { git = "https://github.com/lurk-lang/neptune", branch = "sb/wasm-lurk-compat" }
nova-snark  = { git = "https://github.com/lurk-lang/nova", branch = "sb/wasm-lurk-compat" }
