[package]
name = "web-repl"
description = "Basic Lurk web REPL"
version = "0.1.0"
authors = ["Sam Burnham"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
# lto = true

[features]
# default = ["debug"]
default = ["wee_alloc"]

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2.82"
rayon = "1.5"
wasm-bindgen-rayon = "1.0"
serde_json = "1.0"
rustyline = { package = "yatima-rustyline", version = "0.2", default-features = false }
rustyline-derive = { package = "yatima-rustyline-derive", version = "0.1.0" }
xterm-js-rs = "0.1.2"
lurk = "0.1.1"
blstrs = "0.5.0"
parking_lot = { version = "0.12", features = ["nightly"] }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. However, it is slower than the default
# allocator, so it's not enabled by default.
wee_alloc = { version = "0.4.2", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"

# These crates are used for running unit tests.
[dev-dependencies]
wasm-bindgen-test = "0.2.45"
futures = "0.1.27"
js-sys = "0.3.22"
wasm-bindgen-futures = "0.3.22"

[patch.crates-io]
ec-gpu-gen = { git = "https://github.com/lurk-lang/ec-gpu", rev = "c7ced230ad40cde0708d810a4823ca143627ee16" }
bellperson = { git = "https://github.com/lurk-lang/bellperson", rev = "e7482b1629f25e3955f66571f4553fac2795621c" }
bellperson-nonnative = { git = "https://github.com/lurk-lang/bellperson-nonnative", rev = "2658b7a8f1ec00e7f213a09ef65867e7c268de3b" }
neptune = { git = "https://github.com/lurk-lang/neptune", rev = "ed7f62ffd811ba840a353f6f7b9d674d11f848d4" }
nova-snark  = { git = "https://github.com/lurk-lang/nova", rev = "ac8b45bc6b3de895806874c67928060763948ab9" }
lurk = { git = "https://github.com/lurk-lang/lurk-rs", rev = "dc968655b292b1098ef73a2d26e990abe52d99e3" }

[net]
git-fetch-with-cli = true
